compiler/tests/en/errors/empty_array_infer.salam
// EXPECT: E052
func main:
    items := []
    __ len(items)
end
